# interfere

./: .flake8  .gitignore  .zenodo.json  404.html  README.md  eval_conditional_directed_information.py  index.html  mkdocs.yml  paper.bib  paper.md  pyproject.toml  search.html
.github/workflows/: joss-compile-paper-draft.yml  python-package.yml
benchmark/: index.html
custom_forecast_methods/: index.html
docs/: benchmark.md  custom_forecast_methods.md  extended_paper.bib  extended_paper.md  index.md  intervention.md  optimization.md  prediction.md  simulation.md
examples/: confounding_detection.py
experiments/: noise_exp.pkl  noise_exp_small.pkl
experiments/exp1/: dynamic_models.pkl  exp1_output1.pkl  generate_data.py  inference_methods_small.pkl  requirements.txt  single_slurm_job.sh  slurm_submit.sh
experiments/exp1/runner/: exp_tools.py  run.py  single_slurm_job.sh  slurm_submit.sh  test_exp_tools.py
experiments/exp2/parameters/: dynamic_models.pkl  dynamic_models_small.pkl  inference_methods.pkl
experiments/exp2/runner/: exp_tools.py  requirements.txt  run.py  single_slurm_job.sh  test_exp_tools.py
extended_paper/: index.html
interfere/: __init__.py  base.py  benchmarking.py  causal_information.py  conditional_directed_information.py  cross_validation.py  interventions.py  metrics.py  utils.py
interfere/_methods/: average_method.py  deep_learning.py  dynamic_linear_model.py  reservoir_computer.py  restricted_sindy.py  sindy.py  sindy_sktime_estimator.py  vector_autoregression.py
interfere/_methods/nixtla_methods/: nixtla_adapter.py  statsforecast_methods.py
interfere/_methods/nixtla_methods/neuralforecast_methods/: __init__.py  lstm.py  nhits.py
interfere/dynamics/: __init__.py  arithmetic_brownian_motion.py  base.py  compartmental_models.py  coupled_logistic_maps.py  coupled_map_lattice.py  decoupled_noise_dynamics.py  generative_forecasters.py  geometric_brownian_motion.py  kuramoto.py  lotka_voltera.py  lotka_volterra.py  michaelis_menten.py  mutualistic_pop.py  neuroscience.py  ornstein_uhlenbeck.py  planted_aquarium.py  pyclustering_models.py  pyclustering_utils.py  quadratic_sdes.py  simple_linear_sdes.py  sis.py  statespace_models.py  wilson_cowan.py
interfere/methods/: __init__.py  average_method.py  base.py  deep_learning.py  neuralforecast_methods.py  reservoir_computer.py  sindy.py  sktime_template.py  vector_autoregression.py
interfere/methods/nixtla_methods/: neuralforecast_methods.py  nixtla_adapter.py  statsforecast_methods.py
interfere/methods/nixtla_methods/neuralforecast_methods/: lstm.py  nhits.py
intervention/: index.html
notebooks/: exp1_models.ipynb  exp2_models.ipynb  ic2s2_figures.ipynb
optimization/: index.html
paper/: paper.bib  paper.md  paper_full.md
prediction/: index.html
search/: search_index.json
simulation/: index.html
tests/: sample_models.py  test_base.py  test_benchmarking.py  test_causal_information.py  test_cross_validation.py  test_dynamics.py  test_interventions.py  test_methods.py  test_metrics.py  test_models.py  test_rescomp.py  test_restricted_sindy.py  test_utils.py
