[project]
name = "interfere"
version = "0.0.1"
description = "Predicting how complex systems will respond to interventions."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["complex systems", "dynamics", "nonlinear", "causal inference", "machine learning", "time series", "forecast", "intervention"]
authors = [
  {name = "DJ Passey", email = "djpassey@unc.edu"}
]
dependencies = [
    "neuralforecast",
    "numpy <= 1.26.4",
    "pandas",
    "pyclustering@git+https://github.com/djpasseyjr/pyclustering",
    "pysindy",
    "scikit-learn",
    "statsforecast",
    "statsmodels",
    "typing_extensions"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "sdeint",
    "sktime"
]
notebooks = [
    "jupyter"
]

[tool.setuptools.packages]
find = {}

[project.urls]
Repository = "https://github.com/djpasseyjr/interfere"