[project]
name = "interfere"
version = "1.0.1"
description = "Predicting how complex systems will respond to interventions."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["complex systems", "dynamics", "nonlinear", "causal inference", "machine learning", "time series", "forecast", "intervention"]
authors = [
  {name = "DJ Passey", email = "djpasseyjr@gmail.com"}
]
dependencies = [
    "networkx",
    "numpy<2",
    "optuna",
    "pysindy",
    "scikit-learn",
    "sdeint",
    "statsmodels",
    "typing_extensions"
]

[project.optional-dependencies]
methods = [
    "neuralforecast",
    "statsforecast",
    "sktime",
    "tigramite",
]

dev = [
    "neuralforecast",
    "statsforecast",
    "pytest",
    "sktime",
    "tigramite",
    "pytest-cov",
    "pytest",
    "pylint",
    "black",
    "pydantic"
]

[tool.setuptools.packages]
find = {}

[project.urls]
Repository = "https://github.com/djpasseyjr/interfere"