[project]
name = "interfere"
version = "1.0.1"
description = "Predicting how complex systems will respond to interventions."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["complex systems", "dynamics", "nonlinear", "causal inference", "machine learning", "time series", "forecast", "intervention"]
authors = [
  {name = "DJ Passey", email = "djpasseyjr@gmail.com"}
]
dependencies = [
    "networkx",
    "numpy<2",
    "optuna",
    "pysindy <2.1.0",
    "scikit-learn",
    "sdeint",
    "statsmodels",
    "typing_extensions"
]

[project.optional-dependencies]
methods = [
    "neuralforecast",
    "statsforecast",
    "sktime",
    "tigramite",
    "pydantic"
]

dev = [
    "neuralforecast",
    "statsforecast",
    "pytest",
    "sktime",
    "tigramite",
    "surd @ git+https://github.com/djpasseyjr/surd.git",
    "pyclustering @ git+https://github.com/djpasseyjr/pyclustering",
    "pydantic",
    "pytest-cov",
    "pytest",
    "pylint",
    "black",
    "mkdocs",
]

[tool.setuptools.packages]
find = {}

[tool.black]
line-length = 79

[project.urls]
Repository = "https://github.com/djpasseyjr/interfere"

[build-system]
requires = ["setuptools>=62", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"